--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="js/jquery-1.7.2.min.js"></script>
-<script src="js/easeljs-0.4.2.min.js"></script>
+<script src="js/libs/jquery-1.7.2.min.js"></script>
+<script src="js/libs/easeljs-0.4.2.min.js"></script>
 <script src="js/app.js"></script>
 </head>
 <body style="overflow:hidden">
-<canvas id="back" style="position:absolute;top:0;left:0;"></canvas>
 <canvas id="field" style="position:absolute;top:0;left:0;"></canvas>
 <div style="position:absolute;bottom:0;right:0">
 <div>
