--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <script src="js/libs/jquery-1.7.2.min.js"></script>
 <script src="js/libs/easeljs-0.4.2.min.js"></script>
+<script src="js/puzzle.js"></script>
+<script src="js/cutter.js"></script>
 <script src="js/app.js"></script>
 </head>
 <body style="overflow:hidden">
