updated file structure.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <script src="js/libs/jquery-1.7.2.min.js"></script>
 <script src="js/libs/easeljs-0.4.2.min.js"></script>
-<script src="js/puzzle.js"></script>
-<script src="js/cutter.js"></script>
-<script src="js/app.js"></script>
+<script src="js/bin/puzzle.js"></script>
+<script src="js/bin/cutter.js"></script>
+<script src="js/bin/app.js"></script>
 </head>
 <body style="overflow:hidden">
 <canvas id="field" style="position:absolute;top:0;left:0;"></canvas>
