--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 <script src="js/libs/jquery-1.7.2.min.js"></script>
 <script src="js/libs/easeljs-0.4.2.min.js"></script>
+<script src="js/bin/util.js"></script>
 <script src="js/bin/puzzle.js"></script>
 <script src="js/bin/cutter.js"></script>
+<script src="js/bin/grid_cutter.js"></script>
 <script src="js/bin/app.js"></script>
 </head>
 <body style="overflow:hidden">
