updated standard grid cutter.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <script src="js/libs/easeljs-0.4.2.min.js"></script>
 <script src="js/bin/util.js"></script>
 <script src="js/bin/puzzle.js"></script>
+<script src="js/bin/half_edge.js"></script>
 <script src="js/bin/cutter.js"></script>
 <script src="js/bin/grid_cutter.js"></script>
+<script src="js/bin/standard_grid_cutter.js"></script>
 <script src="js/bin/app.js"></script>
 </head>
 <body style="overflow:hidden">
@@ -14,7 +16,7 @@
 <div style="position:absolute;bottom:0;right:0">
 <div>
 </div>
-<div id="info">ロード</div>
+<div id="info" style="color:white">ロード</div>
 </div>
 </body>
 </html>
