--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <script src="js/libs/easeljs-0.4.2.min.js"></script>
 <script src="js/bin/util.js"></script>
 <script src="js/bin/puzzle.js"></script>
+<script src="js/bin/piece.js"></script>
 <script src="js/bin/half_edge.js"></script>
 <script src="js/bin/cutter.js"></script>
 <script src="js/bin/grid_cutter.js"></script>
