--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <script src="js/libs/jquery-1.7.2.min.js"></script>
 <script src="js/libs/easeljs-0.4.2.min.js"></script>
 <script src="js/bin/util.js"></script>
-<script src="js/bin/puzzle.js"></script>
-<script src="js/bin/piece.js"></script>
-<script src="js/bin/half_edge.js"></script>
-<script src="js/bin/cutter.js"></script>
-<script src="js/bin/grid_cutter.js"></script>
-<script src="js/bin/standard_grid_cutter.js"></script>
+<script src="js/bin/model/puzzle.js"></script>
+<script src="js/bin/model/piece.js"></script>
+<script src="js/bin/model/half_edge.js"></script>
+<script src="js/bin/cutter/cutter.js"></script>
+<script src="js/bin/cutter/grid_cutter.js"></script>
+<script src="js/bin/cutter/standard_grid_cutter.js"></script>
 <script src="js/bin/app.js"></script>
 </head>
 <body style="overflow:hidden">
