--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <script src="js/bin/cutter/cutter.js"></script>
 <script src="js/bin/cutter/grid_cutter.js"></script>
 <script src="js/bin/cutter/standard_grid_cutter.js"></script>
+<script src="js/bin/command/command.js"></script>
+<script src="js/bin/command/translate_command.js"></script>
+<script src="js/bin/command/rotate_command.js"></script>
 <script src="js/bin/app.js"></script>
 </head>
 <body style="overflow:hidden">
