created merge command.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script src="js/bin/command/command.js"></script>
 <script src="js/bin/command/translate_command.js"></script>
 <script src="js/bin/command/rotate_command.js"></script>
+<script src="js/bin/command/merge_command.js"></script>
 <script src="js/bin/app.js"></script>
 </head>
 <body style="overflow:hidden">
