created loop for merge command.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script src="js/bin/model/puzzle.js"></script>
 <script src="js/bin/model/piece.js"></script>
 <script src="js/bin/model/half_edge.js"></script>
+<script src="js/bin/model/loop.js"></script>
 <script src="js/bin/cutter/cutter.js"></script>
 <script src="js/bin/cutter/grid_cutter.js"></script>
 <script src="js/bin/cutter/standard_grid_cutter.js"></script>
