--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
 </div>
 <div id="info" style="color:white">ロード</div>
 </div>
+<audio id="se-merge">
+<source src="asset/merge.wav" />
+<source src="asset/merge.mp3" />
+</audio>
 </body>
 </html>
