--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <script src="js/bin/command/translate_command.js"></script>
 <script src="js/bin/command/rotate_command.js"></script>
 <script src="js/bin/command/merge_command.js"></script>
+<script src="js/bin/controller/browser_controller.js"></script>
 <script src="js/bin/app.js"></script>
 </head>
 <body style="overflow:hidden">
