--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
 <script src="js/libs/jquery-1.7.2.min.js"></script>
 <script src="js/libs/easeljs-0.4.2.min.js"></script>
-<script src="js/bin/util.js"></script>
-<script src="js/bin/model/puzzle.js"></script>
-<script src="js/bin/model/piece.js"></script>
-<script src="js/bin/model/half_edge.js"></script>
-<script src="js/bin/model/loop.js"></script>
-<script src="js/bin/cutter/cutter.js"></script>
-<script src="js/bin/cutter/grid_cutter.js"></script>
-<script src="js/bin/cutter/standard_grid_cutter.js"></script>
-<script src="js/bin/command/command.js"></script>
-<script src="js/bin/command/translate_command.js"></script>
-<script src="js/bin/command/rotate_command.js"></script>
-<script src="js/bin/command/merge_command.js"></script>
-<script src="js/bin/controller/browser_controller.js"></script>
-<script src="js/bin/app.js"></script>
+<script src="js/src/util.js"></script>
+<script src="js/src/model/puzzle.js"></script>
+<script src="js/src/model/piece.js"></script>
+<script src="js/src/model/half_edge.js"></script>
+<script src="js/src/model/loop.js"></script>
+<script src="js/src/cutter/cutter.js"></script>
+<script src="js/src/cutter/grid_cutter.js"></script>
+<script src="js/src/cutter/standard_grid_cutter.js"></script>
+<script src="js/src/command/command.js"></script>
+<script src="js/src/command/translate_command.js"></script>
+<script src="js/src/command/rotate_command.js"></script>
+<script src="js/src/command/merge_command.js"></script>
+<script src="js/src/controller/browser_controller.js"></script>
+<script src="js/src/app.js"></script>
 </head>
 <body style="overflow:hidden">
 <canvas id="field" style="position:absolute;top:0;left:0;"></canvas>
