--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 <script src="js/src/command/rotate_command.js"></script>
 <script src="js/src/command/merge_command.js"></script>
 <script src="js/src/controller/browser_controller.js"></script>
+<script src="js/src/controller/mouse_controller.js"></script>
+<script src="js/src/controller/touch_controller.js"></script>
 <script src="js/src/app.js"></script>
 </head>
-<body style="overflow:hidden">
+<body>
 <canvas id="field" style="position:absolute;top:0;left:0;"></canvas>
 <div style="position:absolute;bottom:0;right:0">
 <div>
