updated around view.

--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
 <script src="js/src/controller/mouse_controller.js"></script>
 <script src="js/src/controller/touch_controller.js"></script>
 <script src="js/src/app.js"></script>
+<link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 <body>
 <canvas id="field" style="position:absolute;top:0;left:0;"></canvas>
 <div style="position:absolute;bottom:0;right:0">
 <div>
+<a href="#fit">[O]</a>
+<a href="#zoom-in">[+]</a>
+<a href="#zoom-out">[-]</a>
 </div>
 <div id="info" style="color:white">ロード</div>
 </div>
-<audio id="se-merge">
-<source src="asset/merge.wav" />
-<source src="asset/merge.mp3" />
-</audio>
+<audio id="se-merge" src="asset/merge.wav" />
 </body>
 </html>
