--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <script src="js/src/controller/touch_controller.js"></script>
 <script src="js/src/app.js"></script>
 <link rel="stylesheet" type="text/css" href="css/styles.css" />
+<meta name="viewport" content="initial-scale=1,minimum-scale=0.2,maximum-scale=10" />
 </head>
 <body>
 <canvas id="field" style="position:absolute;top:0;left:0;"></canvas>
