separated commands from view implementation.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script src="js/src/cutter/grid_cutter.js"></script>
 <script src="js/src/cutter/standard_grid_cutter.js"></script>
 <script src="js/src/command/command.js"></script>
+<script src="js/src/command/transform_command.js"></script>
 <script src="js/src/command/translate_command.js"></script>
 <script src="js/src/command/rotate_command.js"></script>
 <script src="js/src/command/merge_command.js"></script>
