--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <script src="js/libs/jquery-1.7.2.min.js"></script>
+<script src="js/libs/jquery-ui-1.8.21.custom.min.js"></script>
 <script src="js/libs/easeljs-0.4.2.min.js"></script>
 <script src="js/src/util.js"></script>
 <script src="js/src/model/puzzle.js"></script>
@@ -27,6 +28,7 @@
 </head>
 <body>
 <canvas id="field" style="position:absolute;top:0;left:0;"></canvas>
+<canvas id="active" style="position:absolute;top:0;left:0;"></canvas>
 <div style="position:absolute;bottom:0;right:0;font-size:32px">
 <a href="#zoom-in">[+]</a><br />
 <a href="#zoom-out">[-]</a><br />
