revived mouse controller.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src="js/src/command/merge_command.js"></script>
 <script src="js/src/controller/browser_controller.js"></script>
 <script src="js/src/controller/double_canvas_controller.js"></script>
+<script src="js/src/controller/mouse_controller.js"></script>
 <script src="js/src/controller/touch_controller.js"></script>
 <script src="js/src/app.js"></script>
 <link rel="stylesheet" type="text/css" href="css/styles.css" />
