--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
 <div style="position:absolute;bottom:0;left:0">
 <div id="info" style="color:white"></div>
 </div>
-<audio id="se-merge" src="asset/merge.mp3" />
+<div id="image-list">
+<span class="small" data-src="asset/AA145_L_320.jpg"></span>
+<span class="medium" data-src="asset/AA145_L.jpg"></span>
+<span class="large" data-src="asset/IMG_1605.JPG"></span>
+</div>
+<div id="sound-list">
+<audio class="merge" src="asset/merge.mp3" />
+</div>
 </body>
 </html>
