--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <script src="js/libs/jquery-1.7.2.min.js"></script>
 <script src="js/libs/jquery-ui-1.8.21.custom.min.js"></script>
 <script src="js/libs/easeljs-0.4.2.min.js"></script>
+
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+
 <script src="js/src/util.js"></script>
 <script src="js/src/model/puzzle.js"></script>
 <script src="js/src/model/piece.js"></script>
@@ -28,22 +32,182 @@
 <meta names="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 </head>
 <body>
-<canvas id="field" style="position:absolute;top:0;left:0;"></canvas>
-<div style="position:absolute;bottom:0;right:0;font-size:32px">
-<a href="#zoom-in">[+]</a><br />
-<a href="#zoom-out">[-]</a><br />
-<a href="#fit">[=]</a><br />
+
+
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href=".">Zigsaw</a>
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li class="active"><a href=".">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+
+      <!-- Main hero unit for a primary marketing message or call to action -->
+      <div class="hero-unit">
+        <h1>It's time to zigsaw.</h1>
+        <p>In our world, we have a great activity called zigsaw. Now it is time to zigsaw.</p>
+        <p>Select a image and just play for it.</p>
+      </div>
+
+      <ul class="thumbnails">
+      <li id="art-1" class="span3">
+      <div class="thumbnail">
+      <img src="asset/IMG_0248_260.jpg" alt="" />
+      <div class="caption">
+      <h5>Firework</h5>
+      <a class="btn btn-primary" href="#" onclick="start('#art-1');return false;">
+      <i class="icon-play icon-white"></i>
+      Start
+      </a>
+      </div>
+      </div>
+      <div class="image-list">
+      <span class="small" data-src="asset/IMG_0248_480.jpg"></span>
+      <span class="medium" data-src="asset/IMG_0248_980.jpg"></span>
+      <span class="large" data-src="asset/IMG_0248.jpg"></span>
+      </div>
+      </li>
+      
+      <li id="art-2" class="span3">
+      <div class="thumbnail">
+      <img src="asset/IMG_0681_260.jpg" alt="" />
+      <div class="caption">
+      <h5>Sunrise</h5>
+      <a class="btn btn-primary" href="#" onclick="start('#art-2');return false;">
+      <i class="icon-play icon-white"></i>
+      Start
+      </a>
+      </div>
+      </div>
+      <div class="image-list">
+      <span class="small" data-src="asset/IMG_0681_480.jpg"></span>
+      <span class="medium" data-src="asset/IMG_0681_980.jpg"></span>
+      <span class="large" data-src="asset/IMG_0681.jpg"></span>
+      </div>
+      </li>
+
+      <li id="art-3" class="span3">
+      <div class="thumbnail">
+      <img src="asset/IMG_1291_260.jpg" alt="" />
+      <div class="caption">
+      <h5>Lake</h5>
+      <a class="btn btn-primary" href="#" onclick="start('#art-3');return false;">
+      <i class="icon-play icon-white"></i>
+      Start
+      </a>
+      </div>
+      </div>
+      <div class="image-list">
+      <span class="small" data-src="asset/IMG_1291_480.jpg"></span>
+      <span class="medium" data-src="asset/IMG_1291_980.jpg"></span>
+      <span class="large" data-src="asset/IMG_1291.jpg"></span>
+      </div>
+      </li>
+
+      <li id="art-4" class="span3">
+      <div class="thumbnail">
+      <img src="asset/IMG_2062_260.jpg" alt="" />
+      <div class="caption">
+      <h5>Food</h5>
+      <a class="btn btn-primary" href="#" onclick="start('#art-4');return false;">
+      <i class="icon-play icon-white"></i>
+      Start
+      </a>
+      </div>
+      </div>
+      <div class="image-list">
+      <span class="small" data-src="asset/IMG_2062_480.jpg"></span>
+      <span class="medium" data-src="asset/IMG_2062_980.jpg"></span>
+      <span class="large" data-src="asset/IMG_2062.jpg"></span>
+      </div>
+      </li>
+
+      <li id="art-5" class="span3">
+      <div class="thumbnail">
+      <img src="asset/IMG_2887_260.jpg" alt="" />
+      <div class="caption">
+      <h5>Artillery</h5>
+      <a class="btn btn-primary" href="#" onclick="start('#art-5', 'easy');return false;">
+      <i class="icon-play icon-white"></i> Easy
+      </a>
+      <a class="btn btn-primary" href="#" onclick="start('#art-5', 'normal');return false;">
+      <i class="icon-play icon-white"></i> Normal
+      </a>
+      <a class="btn btn-primary" href="#" onclick="start('#art-5', 'hard');return false;">
+      <i class="icon-play icon-white"></i> Hard
+      </a>
+      </div>
+      </div>
+      <div class="image-list">
+      <span class="small" data-src="asset/IMG_2887_480.jpg"></span>
+      <span class="medium" data-src="asset/IMG_2887_980.jpg"></span>
+      <span class="large" data-src="asset/IMG_2887.jpg"></span>
+      </div>
+      </li>
+
+      <li id="art-6" class="span3">
+      <div class="thumbnail">
+      <img src="asset/IMG_9233_260.jpg" alt="" />
+      <div class="caption">
+      <h5>Mountain</h5>
+      <a class="btn btn-primary" href="#" onclick="start('#art-6');return false;">
+      <i class="icon-play icon-white"></i>
+      Start
+      </a>
+      </div>
+      </div>
+      <div class="image-list">
+      <span class="small" data-src="asset/IMG_9233_480.jpg"></span>
+      <span class="medium" data-src="asset/IMG_9233_980.jpg"></span>
+      <span class="large" data-src="asset/IMG_9233.jpg"></span>
+      </div>
+      </li>
+      </ul>
+
+      <hr>
+
+      <footer>
+        <p>&copy; Mikagami dev 2012</p>
+      </footer>
+
+    </div> <!-- /container -->
+
+
+<div id="playboard" style="display:none;position:absolute;top:0;left:0;width:100%;height:100%;">
+<canvas id="field" style="top:0;left:0;"></canvas>
+
+<div id="info" style="color:white;position:absolute;bottom:0;left:0;">
+<div class="progress progress-info">
+<div id="progressbar" class="bar" style="width:0"></div>
 </div>
-<div style="position:absolute;bottom:0;left:0">
-<div id="info" style="color:white"></div>
 </div>
-<div id="image-list">
-<span class="small" data-src="asset/AA145_L_320.jpg"></span>
-<span class="medium" data-src="asset/AA145_L.jpg"></span>
-<span class="large" data-src="asset/IMG_1605.JPG"></span>
+
+<div class="btn-group" style="position:absolute;bottom:9px;right:9px;">
+<a class="btn btn-inverse" href="#zoom-in"><i class="icon-plus icon-white"></i></a>
+<a class="btn btn-inverse" href="#zoom-out"><i class="icon-minus icon-white"></i></a>
+<a class="btn btn-inverse" href="#fit"><i class="icon-resize-small icon-white"></i></a>
 </div>
+
 <div id="sound-list">
 <audio class="merge" src="asset/merge.mp3" />
 </div>
+</div>
+
+
+<script src="js/libs/bootstrap-2.0.4.min.js"></script>
 </body>
 </html>
