--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="js/libs/jquery-1.7.2.min.js"></script>
-<script src="js/libs/jquery-ui-1.8.21.custom.min.js"></script>
-<script src="js/libs/easeljs-0.4.2.min.js"></script>
-
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+<script src="libs/js/jquery-1.7.2.min.js"></script>
+<script src="libs/js/jquery-ui-1.8.21.custom.min.js"></script>
+<script src="libs/js/easeljs-0.4.2.min.js"></script>
+<link href="libs/css/bootstrap.min.css" rel="stylesheet">
+<link href="libs/css/bootstrap-responsive.min.css" rel="stylesheet">
 
 <script src="js/src/util.js"></script>
 <script src="js/src/model/puzzle.js"></script>
@@ -208,6 +207,6 @@
 </div>
 
 
-<script src="js/libs/bootstrap-2.0.4.min.js"></script>
+<script src="libs/js/bootstrap-2.0.4.min.js"></script>
 </body>
 </html>
