implemented finish procedure.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 <script src="libs/js/jquery-1.7.2.min.js"></script>
 <script src="libs/js/jquery-ui-1.8.21.custom.min.js"></script>
 <script src="libs/js/easeljs-0.4.2.min.js"></script>
@@ -54,7 +55,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div id="art-list" class="container">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
@@ -112,6 +113,14 @@
 </div>
 </div>
 
+    <div class="container">
+<div class="alert alert-info span3 offset4 hide" id="finished">
+    <h3>完成</h3>
+    <p>おめでとうございます！</p>
+    <a href="." class="btn">戻る</a>
+    <a href="#" class="btn btn-primary">詳しく>></a>
+</div>
+</div>
 
 <script src="libs/js/bootstrap-2.0.4.min.js"></script>
 </body>
